--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    const biicore = {webroot: 'C:\\Users\\Administrator\\Desktop\\cuoi', bgMusic: 'https://cdn.biihappy.com/ziiweb/wedding-musics/Perfect-EdSheeran-6445593.mp3'};
+    const biicore = {webroot: 'https://sontrandev.github.io/sonthuywedding', bgMusic: 'https://cdn.biihappy.com/ziiweb/wedding-musics/Perfect-EdSheeran-6445593.mp3'};
 </script>
 <script src="template/js/jquery-plugin-collection.js"></script>
 <script src="template/js/script.js"></script>
