--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="bride-groom-box">
               <div class="bride-groom-photo position-relative">
                 <div class="bride-photo-box position-relative">
-                  <img src="images/codau.JPG" alt="Groom" />
+                  <img src="images/codau.jpg" alt="Groom" />
                 </div>
                 <div class="bride-border-box">
                   <span class="bride-groom-border"></span>
