--- a/index.html
+++ b/index.html
@@ -428,29 +428,12 @@
           >
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
-                <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c705d9ec3c2721008e7c/large.jpg"
-                  alt="Aerial view of Central Park"
-                />
-              </figure>
-            </div>
-          </div>
-          <div
-            class="col-lg-4 col-6 bottom-margin shuffle-item"
-            data-groups='["bride","groom"]'
-          >
-            <div class="gallery-box position-relative hover-wrapper">
-              <figure class="story-photo-box position-relative">
-                <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c705d9ec3c2721008e7c/small.jpg"
-                  alt="gallery"
-                  class="img-fluid w-100 d-block"
-                />
+                <img src="images/6.jpg" alt="Cô dâu" />
                 <figcaption>
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c705d9ec3c2721008e7c/small.jpg"
+                    href="images/6.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -465,7 +448,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c709bcaa831e0759c070/small.jpg"
+                  src="images/bg2.JPG"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -473,7 +456,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c709bcaa831e0759c070/large.jpg"
+                    href="images/bg2.JPG"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -488,7 +471,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c70d71ce7c1a760589ae/small.jpg"
+                  src="images/2.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -496,7 +479,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c70d71ce7c1a760589ae/large.jpg"
+                    href="images/2.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -511,7 +494,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c711d9ec3c2721008e7d/small.jpg"
+                  src="images/4.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -519,7 +502,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c711d9ec3c2721008e7d/large.jpg"
+                    href="images/4.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -534,7 +517,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c7143257c206d938d9ce/small.jpg"
+                  src="images/3.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -542,7 +525,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c7143257c206d938d9ce/large.jpg"
+                    href="images/3.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -557,7 +540,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c718b20da361840e89ca/small.jpg"
+                  src="images/7.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -565,7 +548,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c718b20da361840e89ca/large.jpg"
+                    href="images/7.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -580,7 +563,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c71b71ce7c1a760589af/small.jpg"
+                  src="images/tochuc2.JPG"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -588,7 +571,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c71b71ce7c1a760589af/large.jpg"
+                    href="images/tochuc2.JPG"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -603,7 +586,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c71f3257c206d938d9cf/small.jpg"
+                  src="images/5.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -611,7 +594,31 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c71f3257c206d938d9cf/large.jpg"
+                    href="images/5.jpg"
+                  >
+                    <i class="flaticon-plus-symbol"></i>
+                  </a>
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div
+            class="col-lg-4 col-6 bottom-margin shuffle-item"
+            data-groups='["bride","groom"]'
+          >
+            <div class="gallery-box position-relative hover-wrapper">
+              <figure class="story-photo-box position-relative">
+                <img
+                  src="images/tochuc.jpg"
+                  alt="gallery"
+                  class="img-fluid w-100 d-block"
+                />
+                <figcaption>
+                  <a
+                    class="btn btn-sm venobox"
+                    data-gall="myGallery"
+                    href="images/tochuc.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -626,7 +633,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c722cdd89c47f75f5bb0/small.jpg"
+                  src="images/chude.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -634,7 +641,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c722cdd89c47f75f5bb0/large.jpg"
+                    href="images/chude.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -649,7 +656,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c7263257c206d938d9d0/small.jpg"
+                  src="images/codau.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -657,7 +664,30 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="https://cdn.biihappy.com/ziiweb/website/6388bc379e55570349104066/galleries/6388c7263257c206d938d9d0/large.jpg"
+                    href="images/codau.jpg"
+                  >
+                    <i class="flaticon-plus-symbol"></i>
+                  </a>
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+          <div
+            class="col-lg-4 col-6 bottom-margin shuffle-item"
+            data-groups='["bride","groom"]'
+          >
+            <div class="gallery-box position-relative hover-wrapper">
+              <figure class="story-photo-box position-relative">
+                <img
+                  src="images/8.JPG"
+                  alt="gallery"
+                  class="img-fluid w-100 d-block"
+                />
+                <figcaption>
+                  <a
+                    class="btn btn-sm venobox"
+                    data-gall="myGallery"
+                    href="images/8.JPG"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
