--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="bride-groom-box">
               <div class="bride-groom-photo position-relative">
                 <div class="bride-photo-box position-relative">
-                  <img src="images/chude.JPG" alt="Bride" />
+                  <img src="images/chude.jpg" alt="Bride" />
                 </div>
                 <div class="bride-border-box">
                   <span class="bride-groom-border"></span>
@@ -303,7 +303,7 @@
           <div class="grid col-md-6 col-xs-12 col-lg-3">
             <div class="grid-item mb-4">
               <div class="img-holder">
-                <img src="images/tochuc.JPG" alt />
+                <img src="images/tochuc.jpg" alt />
               </div>
               <div class="datails">
                 <h3 style="color: #f00">TIỆC CƯỚI TẠI GĐ NHÀ TRAI</h3>
@@ -344,7 +344,7 @@
           <div class="grid col-md-6 col-xs-12 col-lg-3">
             <div class="grid-item mb-4">
               <div class="img-holder">
-                <img src="images/tochuc2.JPG" alt />
+                <img src="images/tochuc2.jpg" alt />
               </div>
               <div class="datails">
                 <h3 style="color: #f00">TIỆC CƯỚI TẠI GĐ NHÀ GÁI</h3>
@@ -448,7 +448,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="images/bg2.JPG"
+                  src="images/bg2.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -456,7 +456,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="images/bg2.JPG"
+                    href="images/bg2.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -563,7 +563,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="images/tochuc2.JPG"
+                  src="images/tochuc2.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -571,7 +571,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="images/tochuc2.JPG"
+                    href="images/tochuc2.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -679,7 +679,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="images/8.JPG"
+                  src="images/8.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -687,7 +687,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="images/8.JPG"
+                    href="images/8.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
