--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="bride-groom-box">
               <div class="bride-groom-photo position-relative">
                 <div class="bride-photo-box position-relative">
-                  <img src="images/chude.jpg" alt="Bride" />
+                  <img src="images/chure.jpg" alt="Bride" />
                 </div>
                 <div class="bride-border-box">
                   <span class="bride-groom-border"></span>
@@ -344,7 +344,7 @@
           <div class="grid col-md-6 col-xs-12 col-lg-3">
             <div class="grid-item mb-4">
               <div class="img-holder">
-                <img src="images/tochuc2.jpg" alt />
+                <img src="images/tochuc4.jpg" alt />
               </div>
               <div class="datails">
                 <h3 style="color: #f00">TIỆC CƯỚI TẠI GĐ NHÀ GÁI</h3>
@@ -388,7 +388,7 @@
 
     <section
       class="section-bg"
-      style="background: url(images/chude.png) no-repeat; padding: 120px 0"
+      style="background: url(images/chure.png) no-repeat; padding: 120px 0"
     >
       <div class="container">
         <div class="row">
@@ -448,7 +448,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="images/bg2.jpg"
+                  src="images/bg2a.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -456,7 +456,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="images/bg2.jpg"
+                    href="images/bg2a.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -563,7 +563,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="images/tochuc2.jpg"
+                  src="images/tochuc4.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -571,7 +571,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="images/tochuc2.jpg"
+                    href="images/tochuc4.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
@@ -633,7 +633,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="images/chude.jpg"
+                  src="images/chure.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -641,7 +641,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="images/chude.jpg"
+                    href="images/chure.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
