--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           <div class="grid col-md-6 col-xs-12 col-lg-3">
             <div class="grid-item mb-4">
               <div class="img-holder">
-                <img src="images/tochuc.jpg" alt />
+                <img src="images/tochuc3.jpg" alt />
               </div>
               <div class="datails">
                 <h3 style="color: #f00">TIỆC CƯỚI TẠI GĐ NHÀ TRAI</h3>
@@ -610,7 +610,7 @@
             <div class="gallery-box position-relative hover-wrapper">
               <figure class="story-photo-box position-relative">
                 <img
-                  src="images/tochuc.jpg"
+                  src="images/tochuc3.jpg"
                   alt="gallery"
                   class="img-fluid w-100 d-block"
                 />
@@ -618,7 +618,7 @@
                   <a
                     class="btn btn-sm venobox"
                     data-gall="myGallery"
-                    href="images/tochuc.jpg"
+                    href="images/tochuc3.jpg"
                   >
                     <i class="flaticon-plus-symbol"></i>
                   </a>
