--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           <div class="grid col-md-6 col-xs-12 col-lg-3">
             <div class="grid-item mb-4">
               <div class="img-holder">
-                <img src="images/tochuc4.jpg" alt />
+                <img src="images/2.jpg" alt />
               </div>
               <div class="datails">
                 <h3 style="color: #f00">TIỆC CƯỚI TẠI GĐ NHÀ GÁI</h3>
