--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@
           <div class="col col-xs-12">
             <h4 class="text-center">
               <span
-                >...Tình yêu không phải là nhìn chằm chằm vào nhau, mà là nhìn
-                chằm chằm về cùng một hướng...</span
+                >...Tình yêu không phải là những lời thề non hẹn biển, chỉ đơn
+                giản là cùng nhau bình yên qua ngày....</span
               >
             </h4>
             <h2 class="text-center mt-3">--Forever one love--</h2>
