--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
     <section
       class="section-bg"
-      style="background: url(images/chure.png) no-repeat; padding: 120px 0"
+      style="background: url(images/bg2a.jpg) no-repeat; padding: 120px 0"
     >
       <div class="container">
         <div class="row">
