--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
               alt="divider"
             />
             <h3 class="section-subheading">
-              Tình yêu là điều kiện trong đó hạnh phúc của người khác là điều
-              cần thiết cho chính bạn.
+              Tình yêu không phải là những lời thề non hẹn biển, chỉ đơn giản là
+              cùng nhau bình yên qua ngày.
             </h3>
           </div>
         </div>
@@ -294,8 +294,10 @@
               alt="divider"
             />
             <h3 class="section-subheading">
-              Được ai đó yêu sâu sắc sẽ mang lại cho bạn sức mạnh, trong khi yêu
-              ai đó sâu sắc sẽ cho bạn dũng khí.
+              Hạnh phúc nhất trên đời không phải gặp được người tuyệt nhất ở
+              những tháng ngày đẹp nhất. Mà là một người từ từ nhìn mình già đi,
+              không cần ở những năm tháng đẹp nhất, mà ở một độ tuổi phù hợp
+              nhất, nắm tay nhau cùng đi.
             </h3>
           </div>
         </div>
@@ -416,8 +418,9 @@
               alt="divider"
             />
             <h3 class="section-subheading mb-2">
-              Tôi có thể chinh phục thế giới bằng một tay miễn là bạn đang nắm
-              tay kia.
+              Khi gặp nhau phút đầu, từ ánh mắt anh đã trao nụ cười Khẽ ngại
+              ngùng anh nói: "Mình cầm tay nhé" Đưa em qua những con đường tình
+              yêu
             </h3>
           </div>
         </div>
